<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/relativeLayoutProfileRegister"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:padding="5dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayoutCounts">

        <Button
            android:id="@+id/btnRegisterToProfileFragment"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_centerInParent="true"
            android:layout_marginTop="15dp"
            android:background="@drawable/btn_frame_qeydiyyat_background"
            android:padding="2dp"
            android:text="@string/login_panel_button"
            android:textSize="12sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayoutUserInfo"
        android:layout_width="320dp"
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        android:background="#FDFDFE"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtProfileNameSurname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/_user"
            android:textColor="#000000"
            android:textSize="16sp">

        </TextView>

        <ImageView
            android:id="@+id/imgProfilePhotoCircle"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentRight="true"
            app:srcCompat="@drawable/ic_account_circle_black_24dp" />

        <TextView
            android:id="@+id/txtProfileTag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtProfileNameSurname"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="2dp"
            android:fontFamily="@font/roboto"
            android:text="@string/_user"
            android:textColor="#000000"
            android:textSize="13sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayoutCounts"
        android:layout_width="320dp"
        android:layout_height="100dp"
        android:layout_marginTop="70dp"
        android:background="#FDFDFE"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayoutUserInfo">

        <TextView
            android:id="@+id/textView12"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtSharedCount"
            android:layout_alignParentRight="true"
            android:layout_marginRight="25dp"
            android:text="@string/shared"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="11sp" />

        <TextView
            android:id="@+id/txtSharedCount"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/imageView3"
            android:layout_alignParentRight="true"
            android:layout_marginTop="10dp"
            android:layout_marginRight="25dp"
            android:fontFamily="@font/roboto_bold"
            android:text="00"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="23sp" />

        <TextView
            android:id="@+id/textView123"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtSavedCount"
            android:layout_marginLeft="15dp"
            android:layout_toRightOf="@id/txtReadCount"
            android:text="@string/saved"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="11sp" />

        <TextView
            android:id="@+id/txtSavedCount"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/imageView3"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@id/txtReadCount"
            android:fontFamily="@font/roboto_bold"
            android:text="00"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="23sp" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtReadCount"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="25dp"
            android:text="@string/readed"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="11sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/imageView3"
            android:fontFamily="@font/roboto"
            android:text="@string/activity"
            android:textColor="#000000"
            android:textSize="15sp" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="20dp"
            android:layout_height="20dp"
            app:srcCompat="@drawable/ic_track_changes_black_24dp" />

        <TextView
            android:id="@+id/txtReadCount"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/imageView3"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/roboto_bold"
            android:text="00"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="23sp" />
    </RelativeLayout>

    <ImageButton
        android:id="@+id/imageButtonExitProfile"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="57dp"
        android:background="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_exit_to_app_black_24dp" />
</androidx.constraintlayout.widget.ConstraintLayout>